# psqlx

./: .gitignore  .gitmodules  BUILD.md  Cargo.toml  DEVELOPER.md  README.md
src/psqlx/: Cargo.toml
src/psqlx/src/: command.c  lib.rs  psqlx.h  wrapper.h
src/psqlx/src/plugins/: mod.rs
src/psqlx_ai/: Cargo.toml
src/psqlx_ai/src/: ai.rs  lib.rs
src/psqlx_ai/src/commands/: mod.rs
src/psqlx_ai/src/commands/fix/: mod.rs
src/psqlx_ai/src/commands/generate/: mod.rs
src/psqlx_example/: Cargo.toml
src/psqlx_example/src/: lib.rs
src/psqlx_utils/: Cargo.toml
src/psqlx_utils/src/: bindings.rs  lib.rs  spinner.rs
