[package]
name = "psqlx"
version = "0.1.0"
edition = "2021"

[lib]
name = "psqlx"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.169"
libloading = "0.8"
once_cell = "1.20.3"
psqlx_viz = { path = "../psqlx_viz" }
psqlx_ai = { path = "../psqlx_ai" }
psqlx_utils = { path = "../psqlx_utils" }
log = "0.4"
env_logger = "0.10"